3.0.0/_sources/gallery/text_labels_and_annotations/stix_fonts_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_stix_fonts_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_stix_fonts_demo.py:


===============
STIX Fonts Demo
===============





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_stix_fonts_demo_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt
    import numpy as np

    tests = [
        r'$\mathcircled{123} \mathrm{\mathcircled{123}}'
        r' \mathbf{\mathcircled{123}}$',
        r'$\mathsf{Sans \Omega} \mathrm{\mathsf{Sans \Omega}}'
        r' \mathbf{\mathsf{Sans \Omega}}$',
        r'$\mathtt{Monospace}$',
        r'$\mathcal{CALLIGRAPHIC}$',
        r'$\mathbb{Blackboard \pi}$',
        r'$\mathrm{\mathbb{Blackboard \pi}}$',
        r'$\mathbf{\mathbb{Blackboard \pi}}$',
        r'$\mathfrak{Fraktur} \mathbf{\mathfrak{Fraktur}}$',
        r'$\mathscr{Script}$']


    plt.figure(figsize=(8, (len(tests) * 1) + 2))
    plt.plot([0, 0], 'r')
    plt.axis([0, 3, -len(tests), 0])
    plt.yticks(-np.arange(len(tests)))
    for i, s in enumerate(tests):
        plt.text(0.1, -i, s, fontsize=32)

    plt.show()


.. _sphx_glr_download_gallery_text_labels_and_annotations_stix_fonts_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: stix_fonts_demo.py <stix_fonts_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: stix_fonts_demo.ipynb <stix_fonts_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
